# ToyRenderEngine

./: README.md  build_default.bat
src/: CMakeLists.txt  main.cpp
src/Assets/Model/Fbx/: Pani_T.FBX  Rem.FBX  house1.FBX
src/Assets/Scene/: Scene_PaniMat.data  imgui.ini
src/Assets/Shader/: Cs_Blur.hlsl  Cs_Sobel.hlsl  Design_Base.hlsl  Design_InOut.hlsl  Design_Res.hlsl  Ps_Brdf.hlsl  Ps_CubeMap.hlsl  Ps_Gbuffer.hlsl  Ps_IBL_Diffuse.hlsl  Ps_IBL_PreFiltered.hlsl  Ps_ScreenQuat.hlsl  Ps_SimpleTex.hlsl  Ps_Ssao.hlsl  Util_LightCompute.hlsl  Util_Math.hlsl  Util_NormalCompress.hlsl  Util_Sample.hlsl  Vs_CubeMap.hlsl  Vs_Default.hlsl  Vs_Gbuffer.hlsl  Vs_ScreenQuat.hlsl
src/Assets/Textures/PBR/metal-ventilation1/: metal-ventilation1-albedo_1k.dds  metal-ventilation1-ao_1k.dds  metal-ventilation1-height_1k.dds  metal-ventilation1-metallic_1k.dds  metal-ventilation1-normal-dx_1k.dds  metal-ventilation1-roughness_1k.dds
src/Assets/Textures/PBR/rustediron2/: rustediron2_basecolor_1k.dds  rustediron2_metallic_1k.dds  rustediron2_normal_1k.dds  rustediron2_roughness_1k.dds
src/CMakeHelp/: PathHelp.cmake  Qt5Help.cmake
src/CMakeHelp/cmake_example/test_base/: CMakeLists.txt
src/Global/: GobalPath.h
src/Include/Core/EcsCmpt/: Cmpt_Camera.h  Cmpt_CmdParser.h  Cmpt_Mesh.h  Cmpt_ObjCb.h  Cmpt_PassCb.h  Cmpt_SkinMesh.h  Cmpt_SkinRoot.h  Cmpt_Trans.h
src/Include/Core/ShaderDesign/: Design_Base.h  ResHandler.h  ShaderManager.h
src/Include/FrameWork_Release/: TestScene001_Base.h  Ui_CmptParser.h
src/Include/ResourceManage/Fbx/: RFbxAnimDataGet.h  RFbxMiddle.h  RFbxMiddle2MyScene.h  RFbxNodeDataGet.h
src/Include/ResourceManage/Fbx/FbxHelper/: Common.h
src/Include/ResourceManage/Json/: CJsonObject.hpp
src/Include/Scene/: Scene.h  SceneNode.h
src/Src/Core/EcsCmpt/: Cmpt_Camera.cpp  Cmpt_Mesh.cpp  Cmpt_ObjCb.cpp  Cmpt_PassCb.cpp  Cmpt_SkinMesh.cpp  Cmpt_SkinRoot.cpp  Cmpt_Trans.cpp
src/Src/Core/ShaderDesign/: Design_Base.cpp  ResHandler.cpp  ShaderManager.cpp
src/Src/FrameWork_Release/: TestScene001_Base.cpp  UiManager.cpp
src/Src/ResourceManager/Fbx/: RFbxAnimDataGet.cpp  RFbxMiddle.cpp  RFbxMiddle2MyScene.cpp  RFbxNodeDataGet.cpp
src/Src/ResourceManager/Fbx/FbxHelper/: Common.cpp
src/Src/ResourceManager/Json/: CJsonObject.cpp  cJSON.c
src/Src/Scene/: Scene.cpp
src/Ui/GenCode/Moc/: moc_QtGuiZero00.cpp  moc_QtGuiZero00.cpp_parameters
src/Ui/GenCode/UiHeader/: ui_QtGuiZero00.h
src/Ui/Include/: QtGuiZero00.h
src/Ui/Src/: QtGuiZero00.cpp
src/Ui/UiFile/: QtGuiZero00.ui
